# blood_oath

./: .gitignore  Cargo.toml  savegame.json  savegame.ron  webglbuild.sh
.github/workflows/: deploy.yml  pages.yml
bo_ecs/: Cargo.toml
bo_ecs/src/: lib.rs  resources.rs
bo_ecs/src/components/: combat.rs  description.rs  glyph.rs  intent.rs  items.rs  mod.rs  name.rs  particles.rs  position.rs  ranged.rs  seralize.rs  stats.rs  tags.rs
bo_ecs/src/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
bo_logging/: Cargo.toml
bo_logging/src/: builder.rs  events.rs  lib.rs  logstore.rs
bo_map/: Cargo.toml
bo_map/src/: bitgrid.rs  dungeon.rs  lib.rs  map.rs  spatial.rs  themes.rs  tiletype.rs
bo_pathfinding/: Cargo.toml
bo_pathfinding/src/: astar.rs  lib.rs
bo_saveload/: Cargo.toml
bo_saveload/src/: lib.rs  loading.rs  saving.rs
bo_utils/: Cargo.toml
bo_utils/src/: bterm.rs  lib.rs  rng.rs
bo_utils/src/render/: boxes.rs  color.rs  menu.rs  mod.rs
resources/raws/: mobs.ron  props.ron
src/: camera.rs  events.rs  main.rs  random_table.rs  resources.rs  rex_assets.rs  spawner.rs  utils.rs
src/components/: combat.rs  description.rs  equipment.rs  fov.rs  glyph.rs  hunger.rs  intent.rs  items.rs  mod.rs  name.rs  particles.rs  position.rs  ranged.rs  stats.rs  tags.rs  trigger.rs
src/ecs/: mod.rs
src/ecs/components/: combat.rs  description.rs  equipment.rs  fov.rs  glyph.rs  hunger.rs  intent.rs  items.rs  mod.rs  name.rs  particles.rs  position.rs  ranged.rs  stats.rs  tags.rs
src/ecs/dispatcher/: multi_thread.rs
src/ecs/effects/: damage.rs  hunger.rs  mod.rs  particles.rs  targeting.rs  triggers.rs
src/ecs/systems/: damage_system.rs  fov_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  particle_system.rs  trigger_system.rs
src/ecs/systems/ai/: bystander_ai.rs  mod.rs  monster_ai.rs
src/ecs/systems/inventory/: collection_system.rs  drop_system.rs  remove_system.rs  use_system.rs
src/ecs/systems/render/: mod.rs  renderer.rs  tooltips.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/map/: dungeon.rs  map.rs  mod.rs  spatial.rs  themes.rs  tiletype.rs
src/map/map_builders/: common.rs  mod.rs  random.rs  simple_map.rs
src/map/map_builders/bsp/: bsp_dungeon.rs  bsp_interior.rs
src/map/map_builders/builders/: cellular_automata.rs  dla.rs  drunkard.rs  maze.rs  simple_map.rs  voronoi.rs
src/map/map_builders/builders/bsp/: bsp_dungeon.rs  bsp_interior.rs
src/map/map_builders/builders/meta_builders/: door_placement.rs  voronoi_spawning.rs
src/map/map_builders/builders/meta_builders/room/: room_draw.rs  room_exploder.rs
src/map/map_builders/builders/meta_builders/room/corridors/: rooms_corridors_bsp.rs  rooms_corridors_dogleg.rs
src/map/map_builders/builders/prefab_builder/: mod.rs
src/map/map_builders/builders/waveform_collapse/: common.rs  solver.rs
src/map/map_builders/cellular_automata/: mod.rs
src/map/map_builders/drunkard/: mod.rs
src/map/map_builders/maps/town_builder/: mod.rs
src/modes/: map_gen.rs  menu_memory.rs  mod.rs  targeting_mode.rs
src/modes/dialogs/: app_quit_dialog.rs  message_box.rs  yes_no_dialog.rs
src/modes/dungeon_mode/: mod.rs  player.rs  setup.rs  spawner.rs
src/modes/dungeon_mode/effects/: damage.rs  mod.rs  particles.rs  targeting.rs  triggers.rs
src/modes/dungeon_mode/render/: mod.rs
src/modes/dungeon_mode/render/gui/: mod.rs
src/modes/dungeon_mode/systems/: damage_system.rs  end_turn.rs  fov_system.rs  hunger.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  movement.rs  particle_system.rs  render.rs  trigger_system.rs
src/modes/dungeon_mode/systems/inventory/: collection_system.rs  drop_system.rs  equip_use.rs  mod.rs  remove_system.rs  use_system.rs
src/modes/dungeon_mode/systems/render/: mod.rs  renderer.rs  tooltips.rs
src/modes/game_over_mode/: mod.rs
src/modes/inventory_mode/: equipment_action.rs  inventory_action.rs  mod.rs
src/modes/main_menu_mode/: mod.rs  setup.rs
src/raws/: mod.rs
src/raws/rawmaster/: spawn.rs
src/raws/templates/: mob_templates.rs  mod.rs
src/render/: camera.rs  mod.rs
src/render/gui/: hud.rs  mod.rs  tooltips.rs
src/saveload/: saving.rs
src/utils/: macros.rs  mod.rs
src/utils/render/: mod.rs
wasm_help/: index.html
wasm_help/staging/: bload_oath.js  bload_oath_bg.wasm
web/: game_styles.css
web/wasm/: bload_oath.js  bload_oath_bg.wasm
