[package]
edition = "2021"
name = "bload_oath"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true


[dependencies]
# Internal Crates
bo_utils = { path = "bo_utils/" }
bo_logging = { path = "bo_logging/" }
bo_pathfinding = { path = "bo_pathfinding/" }

# Core Crates
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = [
  'serde',
  'specs',
] }

# Utility Crates
lazy_static = "1.4.0"
parking_lot = { version = "^0.12.1", features = ["nightly"] }
bitvec = { version = "^1.0.1", features = ["serde"] }
textwrap = "^0.15.0"

# Serde
serde = { version = "^1.0.140", features = ["derive"] }
ron = "^0.7.1"

####################
# Non WASM Building
####################

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
rayon = { version = "^1.5.3" }
specs = { version = "^0.18.0", default_features = false, features = [
  "parallel",
  "derive",
  "serde",
] }

####################
# WASM Building
####################

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
specs = { version = "^0.18.0", default_features = false, features = [
  "derive",
  "serde",
] }

[build-dependencies]
embed-resource = "1.7.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = ["bo_utils", "bo_logging", "bo_pathfinding"]
