[package]
edition = "2021"
name = "bload_oath"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["bracket-lib/threaded", "specs/parallel", "rayon"]
web = ["getrandom", "wasm-bindgen"]

[dependencies]
# Internal Crates
bo_logging = { path = "bo_logging/" }
bo_pathfinding = { path = "bo_pathfinding/" }
bo_utils = { path = "bo_utils/" }

# Core Crates
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = ['serde', 'specs'] }
rayon = { version = "^1.5", optional = true }
specs = { version = "^0", default_features = false, features = ['derive', 'serde'] }

# Utility Crates
bitvec = { version = "^1", features = ["serde"] }
lazy_static = "1"
parking_lot = { version = "^0.12", features = ["nightly"] }
textwrap = "^0.15"

# Serde
ron = "^0.7.1"
serde = { version = "^1", features = ["derive"] }

####################
# WASM Building
####################
getrandom = { version = "^0.2", optional = true, features = ["js"] }
wasm-bindgen = { version = "^0.2", optional = true }

[build-dependencies]
embed-resource = "1.7.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = ["bo_utils", "bo_logging", "bo_pathfinding"]
