[package]
name = "bo_ecs"
version = "0.1.0"
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"

[dependencies]
bo_utils = { path = "../bo_utils" }

bracket-terminal = "^0.8.5"

serde_json = "^1.0.82"
serde = { version = "^1.0.140", default_features = false, features = [
  "derive",
] }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
specs = { version = "^0.18.0", default_features = false, features = [
  "derive",
  "parallel",
] }


[target.wasm32-unknown-unknown.dependencies]
specs = { version = "^0.18.0", default_features = false, features = ["derive"] }
