[package]
name = "bo_logging"
version = "0.1.0"
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"

[dependencies]
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = [
  'serde',
  'specs',
] }

parking_lot = "^0.12.1"
lazy_static = "^1.4.0"
serde = { version = "^1.0.140", features = ["derive"] }
