[package]
name = "bo_utils"
version = "0.1.0"
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"

[dependencies]
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = [
  'serde',
  'specs',
] }

lazy_static = "^1.4.0"
parking_lot = "^0.12.1"
