[package]
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"
name = "bo_utils"
version = "0.1.0"

[features]
default = ["bracket-lib/threaded"]
web = []

[dependencies]
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = ['serde', 'specs'] }
lazy_static = "^1"
parking_lot = "^0.12"
